--- a/src/Components/Matrix/Matrix.css
+++ b/src/Components/Matrix/Matrix.css
@@ -36,3 +36,7 @@
     background-repeat : no-repeat;
     background-position : center;
   }
+
+  @media only screen and (max-width: 768px) { 
+    .play-chart { width: 100%; }
+  }
