--- a/src/Components/GameStatus/GameStatus.css
+++ b/src/Components/GameStatus/GameStatus.css
@@ -1,7 +1,7 @@
 .status-row {
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
     
   }
   
@@ -12,14 +12,19 @@
     
   }
   .wonStatus {
-    visibility : visible;
+    /* visibility : visible; */
     color : #00ffff;
   }
   
   .lostStatus {
     color : #eb6536;
-    visibility : visible;
+    /* visibility : visible; */
   }
   .newStatus {
-    visibility: hidden; 
+    /* visibility: hidden;  */
+    color: rgb(236, 233, 233);
+  }
+
+  @media only screen and (max-width: 768px) {
+    .status-row { width: 100%; }
   }
