--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,6 +3,8 @@
     text-align: center;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
+    padding: 1rem;
   }
   .titleRow {
     margin-top: 2rem;
