--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,11 @@ body {
   
 }
 
-@media only screen and (max-width: 768px) {
+
+@media only screen and (min-width: 768px) and (max-width: 1920px) {
+  html { font-size: 18px; }
+}
+@media only screen and (min-width: 1920px) {
   html { font-size: 20px; }
 }
 
